[package]
name = "hello-ratatui"
version = "0.1.0"
authors = ["Josh McKinney <joshka@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
ratatui = { version = "0.29.0" , features = ["all-widgets"] }
reqwest = { version = "0.12.19", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
